change name from exactUniqueness to exact_uniqueness

--- a/notebooks/featurestore/aws/s3/S3-Ingest-to-Feature-Store-basics.ipynb
+++ b/notebooks/featurestore/aws/s3/S3-Ingest-to-Feature-Store-basics.ipynb
@@ -106,7 +106,7 @@
     "                                   description=\"On-demand FG with telecom data\",\n",
     "                                   primary_key=[\"customer_id\"],\n",
     "                                   time_travel_format=None,\n",
-    "                                   statistics_config={\"enabled\": True, \"histograms\": True, \"correlations\": True, \"exactUniqueness\": True})\n",
+    "                                   statistics_config={\"enabled\": True, \"histograms\": True, \"correlations\": True, \"exact_uniqueness\": True})\n",
     "telco_fg.save(df)"
    ]
   },
