--- a/notebooks/featurestore/aws/s3/S3-Ingest-to-Feature-Store-housing-data.ipynb
+++ b/notebooks/featurestore/aws/s3/S3-Ingest-to-Feature-Store-housing-data.ipynb
@@ -86,7 +86,7 @@
     "                                   description=\"FG with Sacramento Housing Data\",\n",
     "                                   primary_key=[\"latitude\", \"longitude\"],\n",
     "                                   time_travel_format=None,\n",
-    "                                   statistics_config={\"enabled\": True, \"histograms\": True, \"correlations\": True, \"exactUniqueness\": True})\n",
+    "                                   statistics_config={\"enabled\": True, \"histograms\": True, \"correlations\": True, \"exact_uniqueness\": True})\n",
     "housing_fg.save(df)\n"
    ]
   },
