--- a/notebooks/featurestore/hsfs/basics/feature_engineering.ipynb
+++ b/notebooks/featurestore/hsfs/basics/feature_engineering.ipynb
@@ -179,7 +179,7 @@
     "                                       primary_key=['store'],\n",
     "                                       description=\"Store related features\",\n",
     "                                       time_travel_format=None,\n",
-    "                                       statistics_config={\"enabled\": True, \"histograms\": True, \"correlations\": True, \"exactUniqueness\": True})"
+    "                                       statistics_config={\"enabled\": True, \"histograms\": True, \"correlations\": True, \"exact_uniqueness\": True})"
    ]
   },
   {
@@ -369,7 +369,7 @@
     "                                            primary_key=['store', 'date'],\n",
     "                                            description=\"External features that influence sales, but are not under the control of the distribution chain\",\n",
     "                                            time_travel_format=None,                                            \n",
-    "                                            statistics_config={\"enabled\": True, \"histograms\": True, \"correlations\": True, \"exactUniqueness\": True})\n",
+    "                                            statistics_config={\"enabled\": True, \"histograms\": True, \"correlations\": True, \"exact_uniqueness\": True})\n",
     "exogenous_fg_meta.save(exogenous_fg)"
    ]
   },
