--- a/notebooks/featurestore/hsfs/snowflake/scala.ipynb
+++ b/notebooks/featurestore/hsfs/snowflake/scala.ipynb
@@ -163,7 +163,7 @@
     "                    .query(\"select * from CUSTOMER_CHURN\")\n",
     "                    .description(\"On-demand feature group for telecom customer data\")\n",
     "                    .storageConnector(snowflakeConn)\n",
-    "                    .statisticsConfig(new StatisticsConfig(true, true, true))\n",
+    "                    .statisticsConfig(new StatisticsConfig(true, true, true, true))\n",
     "                    .build())"
    ]
   },
