[HOPSWORKS-2681] Profiling optimization (#237)
Co-authored-by: Till Döhmen <tdoehmen@users.noreply.github.com>

--- a/notebooks/featurestore/azure/azure-ml-studio.ipynb
+++ b/notebooks/featurestore/azure/azure-ml-studio.ipynb
@@ -281,7 +281,7 @@
     "    description=\"containing the latest weekly sales of each store/department\",\n",
     "    primary_key=[\"store\", \"dept\"],\n",
     "    time_travel_format=\"HUDI\",\n",
-    "    statistics_config={\"enabled\": True, \"correlations\": True, \"histograms\": True})\n",
+    "    statistics_config={\"enabled\": True, \"correlations\": True, \"histograms\": True, \"exact_uniqueness\": True})\n",
     "\n",
     "fg_target.save(target_df)"
    ]
@@ -395,7 +395,7 @@
     "    description=\"containing the total historical sales and weekly average of each store/department\",\n",
     "    primary_key=[\"store\", \"dept\"],\n",
     "    time_travel_format=\"HUDI\",\n",
-    "    statistics_config={\"enabled\": True, \"correlations\": True, \"histograms\": True})\n",
+    "    statistics_config={\"enabled\": True, \"correlations\": True, \"histograms\": True, \"exact_uniqueness\": True})\n",
     "\n",
     "weekly_sales_total.save(total_features)"
    ]
