--- a/notebooks/featurestore/databricks/FeatureStoreQuickStartDatabricksAzure.ipynb
+++ b/notebooks/featurestore/databricks/FeatureStoreQuickStartDatabricksAzure.ipynb
@@ -1478,7 +1478,7 @@
     "                       primary_key=['area_id'],\n",
     "                       online_enabled=False,\n",
     "                       time_travel_format=None,\n",
-    "                       statistics_config={\"histograms\": True, \"correlations\": True})\n",
+    "                       statistics_config={\"histograms\": True, \"correlations\": True, \"exact_uniqueness\": True})\n",
     "\n",
     "house_sale_fg.save(houses_for_sale_features_df)"
    ]
@@ -1535,7 +1535,7 @@
     "                       primary_key=['area_id'],\n",
     "                       online_enabled=False,\n",
     "                       time_travel_format=None,\n",
-    "                       statistics_config={\"histograms\": True, \"correlations\": True})\n",
+    "                       statistics_config={\"histograms\": True, \"correlations\": True, \"exact_uniqueness\": True})\n",
     "\n",
     "house_sold_fg.save(houses_sold_features_df)"
    ]
@@ -1622,7 +1622,7 @@
     "                           version=1,\n",
     "                           data_format=\"csv\",\n",
     "                           label=['avg_sold_for'],\n",
-    "                           statistics_config={\"histograms\": True, \"correlations\": True})\n",
+    "                           statistics_config={\"histograms\": True, \"correlations\": True, \"exact_uniqueness\": True})\n",
     "\n",
     "# Save the training dataset\n",
     "td.save(feature_query)"
