--- a/notebooks/featurestore/hsfs/serving/feature_engineering-online-fs.ipynb
+++ b/notebooks/featurestore/hsfs/serving/feature_engineering-online-fs.ipynb
@@ -51,7 +51,7 @@
     "                                       description=\"Store related features\",\n",
     "                                       online_enabled=True,\n",
     "                                       time_travel_format=None,\n",
-    "                                       statistics_config={\"enabled\": True, \"histograms\": True, \"correlations\": True})"
+    "                                       statistics_config={\"enabled\": True, \"histograms\": True, \"correlations\": True, \"exact_uniqueness\": True})"
    ]
   },
   {
