Add use cases to docs

--- a/notebooks/use_cases/credit_card_fraud_detection/2_produce_transactions.ipynb
+++ b/notebooks/use_cases/credit_card_fraud_detection/2_produce_transactions.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: \"Generate credit card transactions data and send to kafka topic\"\n",
+    "title: \"2. Generate credit card transactions data\"\n",
     "date: 2021-04-25\n",
     "type: technical_note\n",
     "draft: false\n",
