--- a/notebooks/use_cases/credit_card_fraud_detection/3_stream-ingestion.ipynb
+++ b/notebooks/use_cases/credit_card_fraud_detection/3_stream-ingestion.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: \"Windowed aggregations using spark streaming and ingestion to the online feature store\"\n",
+    "title: \"3. Windowed aggregations using Spark streaming and ingestion to the Online Feature Store\"\n",
     "date: 2021-04-25\n",
     "type: technical_note\n",
     "draft: false\n",
