--- a/notebooks/use_cases/credit_card_fraud_detection/6_online_serving.ipynb
+++ b/notebooks/use_cases/credit_card_fraud_detection/6_online_serving.ipynb
@@ -4,7 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Serve the autoencoder and detect anomalous credit card activity"
+    "---\n",
+    "title: \"6. Serve the autoencoder and detect anomalous credit card activity\"\n",
+    "date: 2021-06-04\n",
+    "type: technical_note\n",
+    "draft: false\n",
+    "---"
    ]
   },
   {
