--- a/notebooks/use_cases/credit_card_fraud_detection/5_model_training.ipynb
+++ b/notebooks/use_cases/credit_card_fraud_detection/5_model_training.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "title: \"Card fraud model training\"\n",
+    "title: \"5. Train a credit card fraud detector model\"\n",
     "date: 2021-06-04\n",
     "type: technical_note\n",
     "draft: false\n",
