Update use case notebooks

--- a/notebooks/use_cases/credit_card_fraud_detection/0_create_kafka_topic.ipynb
+++ b/notebooks/use_cases/credit_card_fraud_detection/0_create_kafka_topic.ipynb
@@ -22,7 +22,8 @@
     "\n",
     "The first step for this demo is to create the following Kafka topic:\n",
     "\n",
-    "- **'credit_card_transactions'**: used in `2_produce-transactions.ipynb` and `3_stream-ingestion.ipynb` for logging the financial transactions and ingesting aggregations on this data into the Online Feature Store. To create this topic, first we need to create and **emtpy schema** `credit_card_transactions_schema`. An empty schema is represented with the value `[]`.\n"
+    "- **'credit_card_transactions'**: used in `2_produce-transactions.ipynb` and `3_stream-ingestion.ipynb` for logging the financial transactions and ingesting aggregations on this data into the Online Feature Store. To create this topic, first we need to create and **emtpy schema** `credit_card_transactions_schema`. An empty schema is represented with the value `[]`.\n",
+    "- **'credit_card_prediction_logs'**: used in `6_online-serving.ipynb` for storing the prediction logs. For this schema we can choose the built-in schema with name `inferenceschema`.\n"
    ]
   },
   {
