--- a/notebooks/use_cases/credit_card_fraud_detection/3_stream-ingestion.ipynb
+++ b/notebooks/use_cases/credit_card_fraud_detection/3_stream-ingestion.ipynb
@@ -211,6 +211,7 @@
     "    .withWatermark(\"datetime\", \"60 minutes\") \\\n",
     "    .groupBy(window(\"datetime\", \"10 minutes\"), \"cc_num\") \\\n",
     "    .agg(avg(\"amount\").alias(\"avg_amt_per_10m\"), stddev(\"amount\").alias(\"stdev_amt_per_10m\"), count(\"cc_num\").alias(\"num_trans_per_10m\"))\\\n",
+    "    .na.fill(0, [\"stdev_amt_per_10m\"])\\\n",
     "    .select(\"cc_num\", \"num_trans_per_10m\", \"avg_amt_per_10m\", \"stdev_amt_per_10m\")"
    ]
   },
@@ -268,6 +269,7 @@
     "    .withWatermark(\"datetime\", \"60 minutes\") \\\n",
     "    .groupBy(window(\"datetime\", \"60 minutes\"), \"cc_num\") \\\n",
     "    .agg(avg(\"amount\").alias(\"avg_amt_per_1h\"), stddev(\"amount\").alias(\"stdev_amt_per_1h\"), count(\"cc_num\").alias(\"num_trans_per_1h\"))\\\n",
+    "    .na.fill(0, [\"stdev_amt_per_1h\"])\\\n",
     "    .select(\"cc_num\", \"num_trans_per_1h\", \"avg_amt_per_1h\", \"stdev_amt_per_1h\")"
    ]
   },
@@ -325,6 +327,7 @@
     "    .withWatermark(\"datetime\", \"60 minutes\") \\\n",
     "    .groupBy(window(\"datetime\", \"12 hours\"), \"cc_num\") \\\n",
     "    .agg(avg(\"amount\").alias(\"avg_amt_per_12h\"), stddev(\"amount\").alias(\"stdev_amt_per_12h\"), count(\"cc_num\").alias(\"num_trans_per_12h\"))\\\n",
+    "    .na.fill(0, [\"stdev_amt_per_12h\"])\\\n",    
     "    .select(\"cc_num\", \"num_trans_per_12h\", \"avg_amt_per_12h\", \"stdev_amt_per_12h\")"
    ]
   },
