--- a/notebooks/use_cases/credit_card_fraud_detection/6_online_serving.ipynb
+++ b/notebooks/use_cases/credit_card_fraud_detection/6_online_serving.ipynb
@@ -109,8 +109,8 @@
     "\n",
     "response = serving.create_or_update(SERVING_NAME, MODEL_PATH, model_version=best_model['version'], artifact_version=\"CREATE\",\n",
     "                                    kfserving=True, transformer=TRANSFORMER_PATH, \n",
-    "                                    topic_name=TOPIC_NAME, inference_logging=\"TRANSFORMED_AND_PREDICTIONS\",\n",
-    "                                    instances=1, transformerInstances=1)"
+    "                                    topic_name=TOPIC_NAME, inference_logging=\"ALL\",\n",
+    "                                    instances=1, transformer_instances=1)"
    ]
   },
   {
@@ -280,7 +280,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cc_nums_inputs = cc_nums.sample(n=len(cc_nums)*2, replace=True)"
+    "cc_nums_inputs = cc_nums.sample(n=int(len(cc_nums)/10), replace=True)"
    ]
   },
   {
@@ -351,7 +351,7 @@
     "for cc_num in cc_nums_inputs['fg0.cc_num']:\n",
     "    data = { \"signature_name\": \"serving_default\", \"instances\": [{'cc_num': int(cc_num)}] }\n",
     "    response = serving.make_inference_request(SERVING_NAME, data)\n",
-    "    if i % 2000 == 0:\n",
+    "    if i % 500 == 0:\n",
     "        print(response)\n",
     "    i+=1"
    ]
