clarify whatif tool is jupyter classic only

--- a/notebooks/ml/Plotting/What_If_Tool_Notebook.ipynb
+++ b/notebooks/ml/Plotting/What_If_Tool_Notebook.ipynb
@@ -19,7 +19,7 @@
     "id": "UiNxsd4_q9wq"
    },
    "source": [
-    "### What-If Tool in a jupyter notebook\n",
+    "### What-If Tool in Jupyter Classic (does not work on Jupyterlab)\n",
     "\n",
     "WARNING: This notebook only runs on \"classic\" Jupyter, not on Jupyterlab.\n",
     "\n",
