--- a/notebooks/featurestore/hsfs/time_travel/point_in_time_join_python.ipynb
+++ b/notebooks/featurestore/hsfs/time_travel/point_in_time_join_python.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9f05543e",
+   "id": "0558929e",
    "metadata": {},
    "source": [
     "---\n",
@@ -20,7 +20,7 @@
     }
    },
    "cell_type": "markdown",
-   "id": "7d3c764e",
+   "id": "fe3a0f62",
    "metadata": {},
    "source": [
     "# Point-in-Time (PIT) joins in Hopsworks Feature Store\n",
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04674f5e",
+   "id": "a7350180",
    "metadata": {},
    "source": [
     "For the Feature Store to be able to perform a PIT join, we need to tell it where to find the event time stamp within each feature group. Event-time is a timestamp indicating the instant in time when an event happened at the source of the event, so this is *not* an ingestion time stamp or the like, but instead should originate from your source systems.\n",
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a6f1d25d",
+   "id": "2cfa4f96",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "6c115ba2",
+   "id": "3d0ed622",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6dfc8ffd",
+   "id": "b4bcae41",
    "metadata": {},
    "source": [
     "We will first load the Churn Feature Group with the initial contracts. We can assume there is a job running inserting new rows for every new contract into this feature group."
@@ -151,7 +151,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9b8ff2c1",
+   "id": "0e318a92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "92b4e794",
+   "id": "bb7bc6c1",
    "metadata": {},
    "source": [
     "At the same time some contracts will be cancelled and inserted into the feature group over time. We will perform this insertion with a bit of time difference, so that we can later demonstrate the capabilities of PIT joins together with time-travel queries."
@@ -180,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "aa4f94e8",
+   "id": "59836af9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4eded046",
+   "id": "939894c1",
    "metadata": {},
    "source": [
     "Now let's create some mock data for the secondary feature groups, containing the actual explanatory features used to predict the churn.\n",
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "eebcf303",
+   "id": "2509cb5e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c44c2549",
+   "id": "0ba147b2",
    "metadata": {},
    "source": [
     "The marketing activities feature group contains features related to outbound and inbound contacts to the customer. You can imagine these to be computed by a streaming application, updating the features every time new events arrive.\n",
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a2313f0d",
+   "id": "63a49be2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3faa33ec",
+   "id": "cf0b79d7",
    "metadata": {},
    "source": [
     "### Create the feature groups"
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16eef0a1",
+   "id": "5aae4d5e",
    "metadata": {},
    "source": [
     "We are now ready to create our three feature groups. Note the additional argument we are passing, in order to tell the Feature Store which column should be used as `event_time`."
@@ -300,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b06fea29",
+   "id": "eb2467a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "942b5f0e",
+   "id": "de59f81a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "4696ee77",
+   "id": "bad82e84",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "502c468b",
+   "id": "0cb23a39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "3f86a3d6",
+   "id": "547bbf6d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "118afa28",
+   "id": "dab33ed8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e67dda2e",
+   "id": "178e1874",
    "metadata": {},
    "source": [
     "We insert the churned contracts, in a separate upsert step."
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "78243537",
+   "id": "c4ab9ad4",
    "metadata": {},
    "outputs": [
     {
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c96d232",
+   "id": "fde28926",
    "metadata": {},
    "source": [
     "### Constructing a Point-in-Time Join\n",
@@ -412,8 +412,8 @@
     "\n",
     "There are **two requirements** to construct a point in time join:\n",
     "\n",
-    "1. All feature groups have to be event time enabled. If there is no event timestampe available, you can fall back on creating an ingestion timestamp in your feature engineering pipeline.\n",
-    "2. The left-most feature group is the label group, meaning the timestamps from this feature group will be used as reference timestamp against which the explaining features are joined. In our case this is the churn feature group.\n",
+    "1. All feature groups have to be event time enabled. If there is no event timestamp available, you can fall back on creating an ingestion timestamp in your feature engineering pipeline.\n",
+    "2. The label (feature) group is the Feature Group that contains the column that is defined as the \"label\" column when creating the training dataset. The **left-most feature group has to be the label group**, meaning this is the feature group of which the timestamps will be used as reference timestamp against which the explaining features are joined (dark red dots in the diagram above). In our case this is the churn feature group.\n",
     "\n",
     "So let's construct the join:"
    ]
@@ -421,7 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "5c42ab15",
+   "id": "f12e0460",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66f499ea",
+   "id": "d6979580",
    "metadata": {},
    "source": [
     "You can print and look at the constructed SQL join query. However, there is no need to go into this complexity, as it will all be handled by the feature store."
@@ -440,7 +440,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "dd54d96f",
+   "id": "0ed12141",
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b6674a96",
+   "id": "27473bc0",
    "metadata": {},
    "source": [
     "As explained above, the Query itself does not perform any join yet until you call an action such as `.read` on it:"
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "bad949e2",
+   "id": "d505230a",
    "metadata": {},
    "outputs": [
     {
@@ -507,19 +507,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31ba439f",
+   "id": "81421ec4",
    "metadata": {},
    "source": [
-    "#### Filters on poin-in-time queries\n",
+    "#### Filters on point-in-time queries\n",
     "\n",
-    "As any other query, it is possible to apply filters to it.\n",
+    "As with any other query, it is possible to apply filters to it.\n",
     "For example, if you are planning to train only a model for a certain contract type:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "0fa1a312",
+   "id": "794926b8",
    "metadata": {},
    "outputs": [
     {
@@ -542,14 +542,13 @@
     "churn_fg.select_all().join(\n",
     "                        contracts_fg.select([\"contract_type\"])\n",
     "                                    .filter(contracts_fg.contract_type == \"Long-term\")\n",
-    "                        , on=[\"contract_id\"]\n",
-    "                     ) \\\n",
+    "                        , on=[\"contract_id\"]) \\\n",
     "                     .join(marketing_fg.select([\"complaints_7d\", \"outbound_7d\", \"coupon_14d\"]), on=[\"customer_id\"]).read().show(20)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f56320a5",
+   "id": "71a3bec0",
    "metadata": {},
    "source": [
     "#### Combining time-travel and point-in-time join in one query\n",
@@ -560,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "a477963a",
+   "id": "09e38b7a",
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a137672c",
+   "id": "989dabc4",
    "metadata": {},
    "source": [
     "As you can see, there are two commits: (1) the initial commit, which inserted the eight contracts. And (2) the upsert commit with the additinal four churned contracts.\n",
@@ -589,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "d38c99a6",
+   "id": "36145d67",
    "metadata": {},
    "outputs": [
     {
@@ -609,7 +608,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "6ce1d758",
+   "id": "f4a4c700",
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +626,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "069c7c10",
+   "id": "b1ae3097",
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cacb5797",
+   "id": "6d9127dd",
    "metadata": {},
    "source": [
     "And combining this with our point-in-time join:"
@@ -664,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "200fbf65",
+   "id": "3b66ca93",
    "metadata": {},
    "outputs": [
     {
@@ -691,7 +690,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0544d2c",
+   "id": "3790ca45",
    "metadata": {},
    "source": [
     "### Creating the training dataset\n",
@@ -702,7 +701,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "35e12c40",
+   "id": "02cdffc4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,7 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "0b10d5d1",
+   "id": "390d4c22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -724,7 +723,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4662d8c6",
+   "id": "25138e1c",
    "metadata": {},
    "source": [
     "#### Querying the online feature store\n",
@@ -738,7 +737,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "0fce34ae",
+   "id": "939e0596",
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +755,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "da8d3e79",
+   "id": "8fabf89e",
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +773,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5c558b7",
+   "id": "167baa03",
    "metadata": {},
    "outputs": [],
    "source": []
