Update links to new docs.hopsworks.ai structure

--- a/notebooks/featurestore/aws/s3/S3-Ingest-to-Feature-Store-housing-data.ipynb
+++ b/notebooks/featurestore/aws/s3/S3-Ingest-to-Feature-Store-housing-data.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "First, download this sample data from [here](../data/Sacramentorealestatetransactions.csv) - and upload it into a S3 bucket.\n",
     "\n",
-    "Before starting with the execution, you should also create a S3 storage connector pointing to the bucket where you uploaded the data. You can follow the [Storage Connectors documentation](https://docs.hopsworks.ai/latest/setup/) to see how you can create the storage connector from the feature store UI."
+    "Before starting with the execution, you should also create a S3 storage connector pointing to the bucket where you uploaded the data. You can follow the [Storage Connectors documentation](https://docs.hopsworks.ai/feature-store-api/latest/setup/) to see how you can create the storage connector from the feature store UI."
    ]
   },
   {
