fix elasticsearch pyspark notebook

--- a/notebooks/spark/Elasticsearch-python.ipynb
+++ b/notebooks/spark/Elasticsearch-python.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -120,10 +120,17 @@
    "source": [
     "reader = spark.read.format(\n",
     "    \"org.elasticsearch.spark.sql\"\n",
-    ").options(**elasticsearch.get_elasticsearch_config(\"myindex\"))\n",
+    ").options(**elasticsearch.get_elasticsearch_config(\"newindex\"))\n",
     "df = reader.load().orderBy(\"breed\")\n",
     "df.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
